add missing add opens call (#11429)
Fixes https://github.com/JabRef/jabref/issues/11426